# parser_task

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .isort.cfg  celerybeat-schedule  pytest.ini
app/config/: celery.py  env.py  settings.py  urls.py
app/social/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
app/social/migrations/: 0001_initial.py
app/tests/: conftest.py  test_api.py  test_services.py
